# Axiom

./: LICENSE  README.md
crates/axiom-auth/: Cargo.toml
crates/axiom-auth/src/: cache.rs  error.rs  lib.rs  mojang.rs  msa.rs  token.rs  xbl.rs  xsts.rs
crates/axiom-bedrock-protocol/: Cargo.toml
crates/axiom-bedrock-protocol/src/: error.rs  lib.rs
crates/axiom-bedrock-protocol/src/codec/: dec.rs  enc.rs  le.rs  mod.rs
crates/axiom-bedrock-protocol/src/crypto/: aes.rs  jwt.rs  mod.rs  xbox.rs
crates/axiom-bedrock-protocol/src/nbt/: dec.rs  enc.rs  mod.rs  tag.rs
crates/axiom-bedrock-protocol/src/packets/: mod.rs
crates/axiom-bedrock-protocol/src/packets/hs/: connected.rs  mod.rs  unconnected.rs
crates/axiom-bedrock-protocol/src/packets/login/: mod.rs  rp_data.rs  rp_info.rs  rp_resp.rs  start_game.rs
crates/axiom-bedrock-protocol/src/packets/play/: mod.rs
crates/axiom-bedrock-protocol/src/packets/play/c2s/: interact.rs  inv.rs  misc.rs  mod.rs  movement.rs
crates/axiom-bedrock-protocol/src/packets/play/s2c/: entity.rs  inv.rs  misc.rs  mod.rs  player.rs  world.rs
crates/axiom-bedrock-protocol/src/raknet/: ack.rs  arq.rs  datagram.rs  fragment.rs  frame.rs  mod.rs  order.rs  rtt.rs  sock.rs  window.rs
crates/axiom-config/: Cargo.toml  default.toml
crates/axiom-config/src/: bridge.rs  lib.rs  log.rs  rp.rs  server.rs
crates/axiom-core/: Cargo.toml
crates/axiom-core/src/: error.rs  lib.rs
crates/axiom-core/src/agsm/: event.rs  mod.rs  state.rs  trans.rs
crates/axiom-core/src/entity/: ecs.rs  id.rs  kind.rs  meta.rs  mod.rs
crates/axiom-core/src/net/: buf.rs  conn.rs  mod.rs  pkt.rs
crates/axiom-core/src/player/: abilities.rs  inv.rs  mod.rs  pos.rs  state.rs
crates/axiom-core/src/world/: biome.rs  block.rs  chunk.rs  heightmap.rs  mod.rs  palette.rs  section.rs
crates/axiom-java-protocol/: Cargo.toml
crates/axiom-java-protocol/src/: error.rs  lib.rs  varint.rs
crates/axiom-java-protocol/src/codec/: compress.rs  dec.rs  enc.rs  frame.rs  mod.rs
crates/axiom-java-protocol/src/crypto/: aes.rs  auth.rs  mod.rs  rsa.rs
crates/axiom-java-protocol/src/nbt/: dec.rs  enc.rs  mod.rs  tag.rs
crates/axiom-java-protocol/src/packets/: mod.rs
crates/axiom-java-protocol/src/packets/cfg/: c2s.rs  mod.rs  s2c.rs
crates/axiom-java-protocol/src/packets/hs/: c2s.rs  mod.rs
crates/axiom-java-protocol/src/packets/login/: c2s.rs  mod.rs  s2c.rs
crates/axiom-java-protocol/src/packets/play/c2s/: chat.rs  interact.rs  inv.rs  misc.rs  mod.rs  movement.rs
crates/axiom-java-protocol/src/packets/play/s2c/: chat.rs  entity.rs  inv.rs  misc.rs  mod.rs  player.rs  world.rs
crates/axiom-metrics/: Cargo.toml
crates/axiom-metrics/src/: counter.rs  export.rs  gauge.rs  hist.rs  lib.rs
crates/axiom-resource-pipeline/: Cargo.toml
crates/axiom-resource-pipeline/src/: error.rs  lib.rs
crates/axiom-resource-pipeline/src/io/: fs.rs  mod.rs  zip.rs
crates/axiom-resource-pipeline/src/model/: bedrock.rs  conv.rs  geo.rs  java.rs  mod.rs  resolve.rs
crates/axiom-resource-pipeline/src/shader/: hint.rs  mod.rs
crates/axiom-resource-pipeline/src/sound/: map.rs  mod.rs
crates/axiom-resource-pipeline/src/tex/: anim.rs  atlas.rs  mod.rs  pack.rs  uv.rs
crates/axiom-server/: Cargo.toml
crates/axiom-server/src/: cfg.rs  cli.rs  log.rs  main.rs  proxy.rs  sess.rs  sig.rs
crates/axiom-translate/: Cargo.toml
crates/axiom-translate/data/: biome_map.json  block_states.json  entity_map.json  item_map.json
crates/axiom-translate/src/: error.rs  lib.rs
crates/axiom-translate/src/blk/: bedrock.rs  java.rs  mod.rs  prop.rs  table.rs
crates/axiom-translate/src/chk/: biome.rs  light.rs  mod.rs  subchunk.rs
crates/axiom-translate/src/ent/: kind.rs  meta.rs  mod.rs
crates/axiom-translate/src/itm/: mod.rs  nbt.rs  table.rs
crates/axiom-translate/src/nbt/: bridge.rs  mod.rs
tools/inspector/: Cargo.toml
tools/inspector/src/: cap.rs  filter.rs  fmt.rs  main.rs  parse.rs
tools/rpconv/: Cargo.toml
tools/rpconv/src/: cmd.rs  main.rs  report.rs
