[package]
name        = "axiom-bedrock-protocol"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"

[dependencies]
bytes        = "1"
tokio        = { version = "1", features = ["net", "time", "sync", "rt", "macros"] }
thiserror    = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
base64       = "0.22"
aes-gcm      = "0.10"
p256         = { version = "0.13", features = ["ecdh", "pkcs8"] }
sha2         = "0.10"
hmac         = "0.12"
jsonwebtoken = "9"
flate2       = "1"
tracing      = "0.1"
rand         = "0.8"
uuid         = { version = "1", features = ["v4"] }
once_cell    = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
