[package]
name        = "axiom-java-protocol"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"

[dependencies]
bytes     = "1"
tokio     = { version = "1", features = ["net", "io-util", "sync", "rt", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
thiserror = "1"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
flate2    = "1"
aes       = "0.8"
cfb-mode  = "0.8"
rsa       = { version = "0.9", features = ["sha2"] }
sha1      = "0.10"
sha2      = "0.10"
rand      = "0.8"
base64    = "0.22"
reqwest   = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid      = { version = "1", features = ["v4"] }
tracing   = "0.1"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
