[package]
name        = "axiom-metrics"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"

[dependencies]
tokio      = { version = "1", features = ["sync", "time"] }
ahash      = "0.8"
once_cell  = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tracing    = "0.1"
