[package]
name        = "axiom-resource-pipeline"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"

[dependencies]
bytes      = "1"
thiserror  = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir    = "2"
zip        = "2"
sha2       = "0.10"
hex        = "0.4"
tracing    = "0.1"
ahash      = "0.8"
