[package]
name        = "axiom-server"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Axiom bridge server — Bedrock ↔ Java proxy orchestrator"

[[bin]]
name = "axiom"
path = "src/main.rs"

[dependencies]
axiom-core              = { path = "../axiom-core" }
axiom-java-protocol     = { path = "../axiom-java-protocol" }
axiom-bedrock-protocol  = { path = "../axiom-bedrock-protocol" }
axiom-translate         = { path = "../axiom-translate" }
axiom-auth              = { path = "../axiom-auth" }
axiom-config            = { path = "../axiom-config" }
axiom-metrics           = { path = "../axiom-metrics" }

bytes      = "1"
tokio      = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
thiserror  = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap       = { version = "4", features = ["derive"] }
uuid       = { version = "1", features = ["v4"] }
ahash      = "0.8"
once_cell  = "1"
