[package]
name        = "axiom-translate"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"

[dependencies]
bytes      = "1"
thiserror  = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell  = "1"
ahash      = "0.8"
tracing    = "0.1"
smallvec   = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "blk_lookup"
harness = false
