[package]
name        = "axiom-rpconv"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Standalone Java → Bedrock resource pack converter for Axiom"

[[bin]]
name = "rpconv"
path = "src/main.rs"

[dependencies]
clap         = { version = "4", features = ["derive"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
walkdir      = "2"
zip          = "2"
image        = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
tracing      = "0.1"
tracing-subscriber = "0.3"
sha2         = "0.10"
hex          = "0.4"
rayon        = "1"
